--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -45,6 +45,8 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
+      - name: Generate Last Updated File
+        run: echo "$(date)" > data/last_updated.json
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
